Aggiunta immagine ed altre modifiche

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="oppure">oppure</string>
     <string name="crea_il_tuo_account">Crea il tuo account</string>
     <string name="logo">Logo</string>
+    <string name="samplelogo">samplelogo</string>
 </resources>
